MYLOC-155 Fixing border radius on iOS input fields.

--- a/src/less/component/search/_base.less
+++ b/src/less/component/search/_base.less
@@ -15,6 +15,7 @@
     font-size: @font14;
     background: @ls-ui-input-background;
     border: none;
+    -webkit-border-radius: 0;
     outline: none;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -51,6 +52,7 @@
     background-position: 0 -460px;
     background-repeat: no-repeat;
     border: none;
+    -webkit-border-radius: 0;
   }
 
   .bordered {
